--- a/index.html
+++ b/index.html
@@ -1,171 +1,353 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
+<meta charset="UTF-8" />
 <title>Galigyan</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+<!-- FONT -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
-*{margin:0;padding:0;box-sizing:border-box}
-body{font-family:'Poppins',sans-serif;overflow:hidden;background:#f4f1ea;}
-.page{display:none;width:100vw;height:100vh;}
-.page.active{display:flex;flex-direction:column;}
-/* INTRO */
+:root{
+  --green:#27ae60;
+  --green-dark:#1e8e4f;
+  --bg:#f4f7f3;
+  --card:#ffffff;
+  --text:#2c2c2c;
+}
+
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+}
+
+body{
+  font-family:'Poppins',sans-serif;
+  background:var(--bg);
+  overflow:hidden;
+  color:var(--text);
+}
+
+/* ---------- PAGE SYSTEM ---------- */
+.page{
+  display:none;
+  width:100vw;
+  height:100vh;
+}
+.page.active{
+  display:flex;
+  flex-direction:column;
+}
+
+/* ---------- COMMON ---------- */
+.home{
+  position:absolute;
+  top:15px;
+  left:15px;
+  font-size:20px;
+  cursor:pointer;
+  z-index:5;
+}
+
+.btn{
+  background:linear-gradient(135deg,var(--green),var(--green-dark));
+  color:white;
+  border:none;
+  border-radius:40px;
+  padding:14px 36px;
+  font-size:16px;
+  cursor:pointer;
+}
+
+.center{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+}
+
+/* ---------- PAGE 1 : INTRO ---------- */
 .intro{
-  background-size:cover;background-position:center;
-  justify-content:center;align-items:center;color:white;position:relative;text-align:center;
+  background-size:cover;
+  background-position:center;
+  position:relative;
+  color:white;
 }
-.intro::before{content:"";position:absolute;inset:0;background:rgba(0,0,0,.45);}
-.title{
-  position:relative;font-size:42px;font-weight:600;z-index:2;cursor:pointer;
-  transition:.3s ease;margin-bottom:20px;
+.intro::before{
+  content:"";
+  position:absolute;
+  inset:0;
+  background:rgba(0,0,0,0.45);
 }
-.title:hover{transform:scale(1.05);text-shadow:0 0 15px rgba(255,255,255,.6);}
-.explore-btn{
-  position:relative;z-index:2;padding:16px 40px;font-size:18px;
-  border:none;border-radius:40px;background:linear-gradient(90deg,#2ecc71,#27ae60);
-  color:white;cursor:pointer;
+.intro-content{
+  position:relative;
+  z-index:2;
+  height:100%;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  text-align:center;
 }
-/* COMMON */
-.home-btn{font-size:20px;cursor:pointer;margin:15px;}
-/* SERVICES */
-.services{padding:25px;align-items:center;background:#f4f1ea;}
-.services h2{text-align:center;margin:10px;font-size:26px;}
-.service-list{display:flex;flex-direction:column;gap:12px;width:100%;max-width:420px;}
-.service-item{
-  height:100px;border-radius:15px;color:white;position:relative;
-  background-size:cover;background-position:center;cursor:pointer;overflow:hidden;
+.logo{
+  font-size:42px;
+  font-weight:700;
+  margin-bottom:20px;
+  cursor:pointer;
+  transition:0.3s;
 }
-.service-item::before{content:"";position:absolute;inset:0;background:rgba(0,0,0,.45);}
-.service-item h3{position:absolute;bottom:10px;left:15px;z-index:2;font-size:18px;}
-.rating{position:absolute;bottom:10px;right:15px;z-index:2;color:gold;font-size:14px;}
-/* LOCATION */
-.location{padding:25px;background:#eef3ee;}
-.location h2{text-align:center;margin:15px;}
-.location-box{background:white;border-radius:20px;padding:25px;max-width:420px;margin:0 auto;}
-.location-input{display:flex;gap:10px;border:1px solid #ccc;border-radius:12px;padding:12px;}
-.location-input input{border:none;outline:none;width:100%;}
-.radius{margin-top:20px;}
-.radius-value{text-align:center;font-size:14px;margin-bottom:8px;font-weight:600;}
-.radius input{width:100%;}
-.continue-btn{
-  margin-top:20px;width:100%;padding:14px;border:none;border-radius:30px;
-  background:linear-gradient(90deg,#2ecc71,#27ae60);color:white;cursor:pointer;
+.logo:hover{
+  transform:scale(1.05);
+  text-shadow:0 0 15px rgba(255,255,255,.6);
 }
-/* RESULTS */
-.results{padding:20px;}
-.results h2{text-align:center;}
-.note{text-align:center;font-size:13px;opacity:.7;margin-bottom:15px;}
-.result-card{background:white;border-radius:16px;padding:15px;margin-bottom:12px;}
-/* THANK YOU */
+
+/* ---------- PAGE 2 : SERVICES ---------- */
+.services{
+  padding:60px 20px 20px;
+  align-items:center;
+}
+.services h2{
+  text-align:center;
+  margin-bottom:20px;
+}
+.service-list{
+  width:100%;
+  max-width:500px;
+  display:flex;
+  flex-direction:column;
+  gap:14px;
+}
+.service{
+  height:90px;
+  border-radius:16px;
+  background-size:cover;
+  background-position:center;
+  position:relative;
+  color:white;
+  cursor:pointer;
+}
+.service::before{
+  content:"";
+  position:absolute;
+  inset:0;
+  background:rgba(0,0,0,0.45);
+}
+.service span{
+  position:absolute;
+  left:16px;
+  bottom:14px;
+  font-size:18px;
+  font-weight:600;
+}
+.service small{
+  position:absolute;
+  right:16px;
+  bottom:14px;
+  color:gold;
+}
+
+/* ---------- PAGE 3 : LOCATION ---------- */
+.location{
+  padding:60px 20px 20px;
+}
+.box{
+  max-width:420px;
+  margin:0 auto;
+  background:white;
+  padding:24px;
+  border-radius:20px;
+}
+.input-row{
+  display:flex;
+  gap:10px;
+  border:1px solid #ccc;
+  border-radius:12px;
+  padding:12px;
+}
+.input-row input{
+  border:none;
+  outline:none;
+  width:100%;
+}
+.radius{
+  margin-top:20px;
+}
+.radius-value{
+  text-align:center;
+  font-weight:600;
+  margin-bottom:8px;
+}
+.radius input{
+  width:100%;
+}
+
+/* ---------- PAGE 4 : RESULTS ---------- */
+.results{
+  padding:60px 20px 20px;
+}
+.note{
+  text-align:center;
+  font-size:13px;
+  opacity:.7;
+  margin-bottom:16px;
+}
+.result{
+  background:white;
+  padding:14px;
+  border-radius:14px;
+  margin-bottom:12px;
+}
+
+/* ---------- PAGE 5 : THANK YOU ---------- */
 .thankyou{
-  justify-content:center;align-items:center;text-align:center;
-  background:linear-gradient(180deg,#f0f9f4,#c8f1d3);
-  animation:fadein .8s ease;
+  justify-content:center;
+  align-items:center;
+  text-align:center;
+  background:linear-gradient(180deg,#f0f9f4,#dff3e7);
 }
-@keyframes fadein{from{opacity:0;}to{opacity:1;}}
-.thankyou h2{font-size:26px;margin-bottom:10px;}
-.stars span{font-size:30px;cursor:pointer;color:#ccc;}
-.stars span.active{color:gold;}
-.appreciation{margin-top:8px;font-size:14px;opacity:.8;}
-.creator{font-size:13px;opacity:.7;margin-top:25px;}
+.stars span{
+  font-size:30px;
+  cursor:pointer;
+  color:#ccc;
+}
+.stars span.active{
+  color:gold;
+}
+.creator{
+  margin-top:24px;
+  font-size:13px;
+  opacity:.7;
+}
+
+/* ---------- DESKTOP ---------- */
+@media(min-width:768px){
+  .logo{font-size:56px}
+  .btn{font-size:18px}
+}
 </style>
 </head>
+
 <body>
-<audio id="clickSound"><source src="https://www.soundjay.com/buttons/sounds/button-16.mp3"></audio>
-<audio id="pageSound"><source src="https://www.soundjay.com/buttons/sounds/button-09.mp3"></audio>
 
-<!-- INTRO -->
+<!-- SOUNDS -->
+<audio id="clickSound">
+  <source src="https://www.soundjay.com/buttons/sounds/button-16.mp3">
+</audio>
+<audio id="pageSound">
+  <source src="https://www.soundjay.com/buttons/sounds/button-09.mp3">
+</audio>
+
+<!-- PAGE 1 -->
 <section class="page intro active" id="p1">
-  <div class="title">Galigyan</div>
-  <button class="explore-btn" onclick="goPage('p2')">Explore Now →</button>
+  <div class="intro-content">
+    <div class="logo">Galigyan</div>
+    <button class="btn" onclick="go('p2')">Explore Now →</button>
+  </div>
 </section>
 
-<!-- SERVICES -->
+<!-- PAGE 2 -->
 <section class="page services" id="p2">
-  <div class="home-btn" onclick="goPage('p1')">🏠 Home</div>
+  <div class="home" onclick="go('p1')">🏠</div>
   <h2>What do you want to explore?</h2>
+
   <div class="service-list">
-    <div class="service-item" style="background-image:url('https://images.unsplash.com/photo-1524492412937-b28074a5d7da')" onclick="goPage('p3')">
-      <h3>Best Places</h3><div class="rating">★★★★★</div>
+    <div class="service" onclick="go('p3')" style="background-image:url('https://images.unsplash.com/photo-1524492412937-b28074a5d7da')">
+      <span>Best Places</span><small>★★★★★</small>
     </div>
-    <div class="service-item" style="background-image:url('https://images.unsplash.com/photo-1566073771259-6a8506099945')" onclick="goPage('p3')">
-      <h3>Hotels</h3><div class="rating">★★★★☆</div>
+    <div class="service" onclick="go('p3')" style="background-image:url('https://images.unsplash.com/photo-1566073771259-6a8506099945')">
+      <span>Hotels & Stays</span><small>★★★★☆</small>
     </div>
-    <div class="service-item" style="background-image:url('https://images.unsplash.com/photo-1548013146-72479768bada')" onclick="goPage('p3')">
-      <h3>Spiritual</h3><div class="rating">★★★★★</div>
+    <div class="service" onclick="go('p3')" style="background-image:url('https://images.unsplash.com/photo-1548013146-72479768bada')">
+      <span>Spiritual Places</span><small>★★★★★</small>
     </div>
-    <div class="service-item" style="background-image:url('https://images.unsplash.com/photo-1555396273-367ea4eb4db5')" onclick="goPage('p3')">
-      <h3>Restaurants</h3><div class="rating">★★★★☆</div>
+    <div class="service" onclick="go('p3')" style="background-image:url('https://images.unsplash.com/photo-1555396273-367ea4eb4db5')">
+      <span>Restaurants</span><small>★★★★☆</small>
     </div>
-    <div class="service-item" style="background-image:url('https://images.unsplash.com/photo-1521334884684-d80222895322')" onclick="goPage('p3')">
-      <h3>Shopping</h3><div class="rating">★★★★☆</div>
+    <div class="service" onclick="go('p3')" style="background-image:url('https://images.unsplash.com/photo-1521334884684-d80222895322')">
+      <span>Shopping Areas</span><small>★★★★☆</small>
     </div>
   </div>
 </section>
 
-<!-- LOCATION -->
+<!-- PAGE 3 -->
 <section class="page location" id="p3">
-  <div class="home-btn" onclick="goPage('p1')">🏠 Home</div>
-  <h2>Where are you right now?</h2>
-  <div class="location-box">
-    <div class="location-input">
-      <input placeholder="Enter your location"><span>📍</span>
+  <div class="home" onclick="go('p1')">🏠</div>
+  <div class="box">
+    <h3>Where are you right now?</h3>
+    <div class="input-row">
+      <input placeholder="Enter your location">
+      📍
     </div>
+
     <div class="radius">
-      <div class="radius-value" id="radiusValue">10 m</div>
-      <input type="range" min="1" max="6" value="1" oninput="updateRadius(this.value)">
+      <div class="radius-value" id="rVal">10 m</div>
+      <input type="range" min="1" max="6" value="1" oninput="radius(this.value)">
     </div>
-    <button class="continue-btn" onclick="goPage('p4')">Continue</button>
+
+    <button class="btn" style="margin-top:20px;width:100%" onclick="go('p4')">Continue</button>
   </div>
 </section>
 
-<!-- RESULTS -->
+<!-- PAGE 4 -->
 <section class="page results" id="p4">
-  <div class="home-btn" onclick="goPage('p1')">🏠 Home</div>
+  <div class="home" onclick="go('p1')">🏠</div>
   <h2>Best results for you</h2>
   <div class="note">Showing sample results. Real data coming soon.</div>
-  <div class="result-card"><h4>Taj Mahal</h4>⭐⭐⭐⭐⭐</div>
-  <div class="result-card"><h4>Golden Temple</h4>⭐⭐⭐⭐☆</div>
-  <button class="continue-btn" onclick="goPage('p5')">Continue</button>
+
+  <div class="result">Taj Mahal – ⭐⭐⭐⭐⭐</div>
+  <div class="result">Golden Temple – ⭐⭐⭐⭐☆</div>
+
+  <button class="btn" style="margin-top:10px" onclick="go('p5')">Continue</button>
 </section>
 
-<!-- THANK YOU -->
+<!-- PAGE 5 -->
 <section class="page thankyou" id="p5">
-  <div class="home-btn" onclick="goPage('p1')">🏠 Home</div>
-  <div>
-    <h2>Thank you for exploring India with Galigyan 🌏</h2>
-    <p>Your feedback means a lot 💫</p>
-    <div class="stars" id="stars">
-      <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
-    </div>
+  <div class="home" onclick="go('p1')">🏠</div>
+  <h2>Thank you for exploring India with Galigyan 🌏</h2>
+  <p>Your feedback means a lot 💚</p>
+
+  <div class="stars" id="stars">
+    <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
   </div>
+
   <div class="creator">Created by Aman Kumar Mishra</div>
 </section>
 
 <script>
 const click=document.getElementById("clickSound");
 const page=document.getElementById("pageSound");
-function goPage(id){
+function go(id){
   click.play();page.play();
   document.querySelectorAll(".page").forEach(p=>p.classList.remove("active"));
   document.getElementById(id).classList.add("active");
 }
-const radiusMap=["10 m","500 m","1 km","10 km","100 km","♾"];
-function updateRadius(v){document.getElementById("radiusValue").innerText=radiusMap[v-1];}
+
+const map=["10 m","500 m","1 km","10 km","100 km","♾"];
+function radius(v){
+  document.getElementById("rVal").innerText=map[v-1];
+}
+
 const stars=document.getElementById("stars").children;
 for(let i=0;i<stars.length;i++){
-  stars[i].onclick=()=>{for(let j=0;j<stars.length;j++)stars[j].classList.remove("active");
-    for(let k=0;k<=i;k++)stars[k].classList.add("active");};
+  stars[i].onclick=()=>{
+    for(let j=0;j<stars.length;j++)stars[j].classList.remove("active");
+    for(let k=0;k<=i;k++)stars[k].classList.add("active");
+  };
 }
+
+/* intro bg */
 const intro=document.getElementById("p1");
 const imgs=[
   "https://images.unsplash.com/photo-1564507592333-c60657eea523",
   "https://images.unsplash.com/photo-1506466010722-395aa2bef877",
   "https://images.unsplash.com/photo-1548013146-72479768bada"
 ];
-let idx=0;intro.style.backgroundImage=url(${imgs[0]});
-setInterval(()=>{idx=(idx+1)%imgs.length;intro.style.backgroundImage=url(${imgs[idx]});},4000);
+let i=0;
+intro.style.backgroundImage=url(${imgs[0]});
+setInterval(()=>{i=(i+1)%imgs.length;intro.style.backgroundImage=url(${imgs[i]});},4000);
 </script>
+
 </body>
 </html>
