--- a/index.html
+++ b/index.html
@@ -1,33 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<title>Galigyan</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<title>Galigyan – Explore India Better</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- FONT -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+<!-- GOOGLE FONT -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
 <style>
-:root{
-  --green:#27ae60;
-  --green-dark:#1e8e4f;
-  --bg:#f4f7f3;
-  --card:#ffffff;
-  --text:#2c2c2c;
-}
-
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-}
-
+*{margin:0;padding:0;box-sizing:border-box}
 body{
   font-family:'Poppins',sans-serif;
-  background:var(--bg);
+  background:#f3f6f2;
   overflow:hidden;
-  color:var(--text);
 }
 
 /* ---------- PAGE SYSTEM ---------- */
@@ -43,78 +29,66 @@ body{
 
 /* ---------- COMMON ---------- */
 .home{
-  position:absolute;
-  top:15px;
-  left:15px;
   font-size:20px;
+  margin:14px;
   cursor:pointer;
-  z-index:5;
 }
-
-.btn{
-  background:linear-gradient(135deg,var(--green),var(--green-dark));
-  color:white;
+button{
   border:none;
-  border-radius:40px;
-  padding:14px 36px;
-  font-size:16px;
   cursor:pointer;
 }
-
-.center{
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  justify-content:center;
+.btn-primary{
+  background:linear-gradient(90deg,#2ecc71,#27ae60);
+  color:white;
+  padding:14px 34px;
+  border-radius:30px;
+  font-size:16px;
 }
 
-/* ---------- PAGE 1 : INTRO ---------- */
-.intro{
+/* ---------- INTRO ---------- */
+#intro{
+  justify-content:center;
+  align-items:center;
+  text-align:center;
+  color:white;
   background-size:cover;
   background-position:center;
   position:relative;
-  color:white;
 }
-.intro::before{
+#intro::before{
   content:"";
   position:absolute;
   inset:0;
-  background:rgba(0,0,0,0.45);
-}
-.intro-content{
-  position:relative;
-  z-index:2;
-  height:100%;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  justify-content:center;
-  text-align:center;
+  background:rgba(0,0,0,.45);
 }
 .logo{
   font-size:42px;
-  font-weight:700;
+  font-weight:600;
   margin-bottom:20px;
-  cursor:pointer;
-  transition:0.3s;
+  position:relative;
+  z-index:2;
+  transition:.3s;
 }
 .logo:hover{
   transform:scale(1.05);
-  text-shadow:0 0 15px rgba(255,255,255,.6);
+  text-shadow:0 0 12px rgba(255,255,255,.6);
+}
+#intro .btn-primary{
+  position:relative;
+  z-index:2;
 }
 
-/* ---------- PAGE 2 : SERVICES ---------- */
-.services{
-  padding:60px 20px 20px;
-  align-items:center;
+/* ---------- SERVICES ---------- */
+#services{
+  padding:20px;
 }
-.services h2{
+#services h2{
   text-align:center;
-  margin-bottom:20px;
+  margin-bottom:15px;
 }
 .service-list{
-  width:100%;
-  max-width:500px;
+  max-width:420px;
+  margin:0 auto;
   display:flex;
   flex-direction:column;
   gap:14px;
@@ -122,191 +96,179 @@ body{
 .service{
   height:90px;
   border-radius:16px;
+  color:white;
+  position:relative;
   background-size:cover;
   background-position:center;
-  position:relative;
-  color:white;
-  cursor:pointer;
 }
 .service::before{
   content:"";
   position:absolute;
   inset:0;
-  background:rgba(0,0,0,0.45);
+  background:rgba(0,0,0,.45);
 }
 .service span{
   position:absolute;
+  bottom:12px;
   left:16px;
-  bottom:14px;
-  font-size:18px;
-  font-weight:600;
+  z-index:2;
+  font-size:17px;
 }
 .service small{
   position:absolute;
+  bottom:12px;
   right:16px;
-  bottom:14px;
+  z-index:2;
   color:gold;
 }
 
-/* ---------- PAGE 3 : LOCATION ---------- */
-.location{
-  padding:60px 20px 20px;
+/* ---------- LOCATION ---------- */
+#location{
+  padding:20px;
+  background:#eef3ee;
 }
-.box{
+#location h2{
+  text-align:center;
+  margin-bottom:12px;
+}
+.loc-box{
+  background:white;
   max-width:420px;
   margin:0 auto;
-  background:white;
-  padding:24px;
+  padding:22px;
   border-radius:20px;
 }
-.input-row{
+.loc-input{
   display:flex;
   gap:10px;
   border:1px solid #ccc;
-  border-radius:12px;
   padding:12px;
+  border-radius:12px;
 }
-.input-row input{
+.loc-input input{
   border:none;
   outline:none;
   width:100%;
 }
-.radius{
-  margin-top:20px;
-}
 .radius-value{
   text-align:center;
+  margin:12px 0 6px;
   font-weight:600;
-  margin-bottom:8px;
 }
-.radius input{
-  width:100%;
-}
+input[type=range]{width:100%}
 
-/* ---------- PAGE 4 : RESULTS ---------- */
-.results{
-  padding:60px 20px 20px;
+/* ---------- RESULTS ---------- */
+#results{
+  padding:20px;
 }
 .note{
   text-align:center;
   font-size:13px;
   opacity:.7;
-  margin-bottom:16px;
+  margin-bottom:14px;
 }
 .result{
   background:white;
+  border-radius:16px;
   padding:14px;
-  border-radius:14px;
-  margin-bottom:12px;
+  margin-bottom:10px;
 }
 
-/* ---------- PAGE 5 : THANK YOU ---------- */
-.thankyou{
+/* ---------- THANK YOU ---------- */
+#thanks{
   justify-content:center;
   align-items:center;
   text-align:center;
-  background:linear-gradient(180deg,#f0f9f4,#dff3e7);
+  background:linear-gradient(180deg,#f0f9f4,#c8f1d3);
 }
 .stars span{
   font-size:30px;
   cursor:pointer;
   color:#ccc;
 }
-.stars span.active{
-  color:gold;
-}
+.stars span.active{color:gold}
 .creator{
   margin-top:24px;
   font-size:13px;
   opacity:.7;
-}
-
-/* ---------- DESKTOP ---------- */
-@media(min-width:768px){
-  .logo{font-size:56px}
-  .btn{font-size:18px}
 }
 </style>
 </head>
 
 <body>
 
-<!-- SOUNDS -->
-<audio id="clickSound">
+<!-- AUDIO -->
+<audio id="click">
   <source src="https://www.soundjay.com/buttons/sounds/button-16.mp3">
 </audio>
-<audio id="pageSound">
-  <source src="https://www.soundjay.com/buttons/sounds/button-09.mp3">
-</audio>
 
-<!-- PAGE 1 -->
-<section class="page intro active" id="p1">
-  <div class="intro-content">
-    <div class="logo">Galigyan</div>
-    <button class="btn" onclick="go('p2')">Explore Now →</button>
-  </div>
+<!-- INTRO -->
+<section class="page active" id="intro">
+  <div class="logo">Galigyan</div>
+  <button class="btn-primary" onclick="go('services')">Explore Now →</button>
 </section>
 
-<!-- PAGE 2 -->
-<section class="page services" id="p2">
-  <div class="home" onclick="go('p1')">🏠</div>
+<!-- SERVICES -->
+<section class="page" id="services">
+  <div class="home" onclick="go('intro')">🏠 Home</div>
   <h2>What do you want to explore?</h2>
 
   <div class="service-list">
-    <div class="service" onclick="go('p3')" style="background-image:url('https://images.unsplash.com/photo-1524492412937-b28074a5d7da')">
+    <div class="service" onclick="go('location')" style="background-image:url('https://images.unsplash.com/photo-1524492412937-b28074a5d7da')">
       <span>Best Places</span><small>★★★★★</small>
     </div>
-    <div class="service" onclick="go('p3')" style="background-image:url('https://images.unsplash.com/photo-1566073771259-6a8506099945')">
+    <div class="service" onclick="go('location')" style="background-image:url('https://images.unsplash.com/photo-1566073771259-6a8506099945')">
       <span>Hotels & Stays</span><small>★★★★☆</small>
     </div>
-    <div class="service" onclick="go('p3')" style="background-image:url('https://images.unsplash.com/photo-1548013146-72479768bada')">
+    <div class="service" onclick="go('location')" style="background-image:url('https://images.unsplash.com/photo-1548013146-72479768bada')">
       <span>Spiritual Places</span><small>★★★★★</small>
     </div>
-    <div class="service" onclick="go('p3')" style="background-image:url('https://images.unsplash.com/photo-1555396273-367ea4eb4db5')">
+    <div class="service" onclick="go('location')" style="background-image:url('https://images.unsplash.com/photo-1555396273-367ea4eb4db5')">
       <span>Restaurants</span><small>★★★★☆</small>
     </div>
-    <div class="service" onclick="go('p3')" style="background-image:url('https://images.unsplash.com/photo-1521334884684-d80222895322')">
+    <div class="service" onclick="go('location')" style="background-image:url('https://images.unsplash.com/photo-1521334884684-d80222895322')">
       <span>Shopping Areas</span><small>★★★★☆</small>
     </div>
   </div>
 </section>
 
-<!-- PAGE 3 -->
-<section class="page location" id="p3">
-  <div class="home" onclick="go('p1')">🏠</div>
-  <div class="box">
-    <h3>Where are you right now?</h3>
-    <div class="input-row">
+<!-- LOCATION -->
+<section class="page" id="location">
+  <div class="home" onclick="go('intro')">🏠 Home</div>
+  <h2>Where are you right now?</h2>
+
+  <div class="loc-box">
+    <div class="loc-input">
       <input placeholder="Enter your location">
-      📍
+      <span>📍</span>
     </div>
 
-    <div class="radius">
-      <div class="radius-value" id="rVal">10 m</div>
-      <input type="range" min="1" max="6" value="1" oninput="radius(this.value)">
-    </div>
+    <div class="radius-value" id="rVal">10 m</div>
+    <input type="range" min="1" max="6" value="1" oninput="updateRadius(this.value)">
 
-    <button class="btn" style="margin-top:20px;width:100%" onclick="go('p4')">Continue</button>
+    <button class="btn-primary" style="width:100%;margin-top:16px" onclick="go('results')">
+      Continue
+    </button>
   </div>
 </section>
 
-<!-- PAGE 4 -->
-<section class="page results" id="p4">
-  <div class="home" onclick="go('p1')">🏠</div>
-  <h2>Best results for you</h2>
+<!-- RESULTS -->
+<section class="page" id="results">
+  <div class="home" onclick="go('intro')">🏠 Home</div>
+  <h2 style="text-align:center">Best results for you</h2>
   <div class="note">Showing sample results. Real data coming soon.</div>
 
-  <div class="result">Taj Mahal – ⭐⭐⭐⭐⭐</div>
-  <div class="result">Golden Temple – ⭐⭐⭐⭐☆</div>
+  <div class="result"><strong>Taj Mahal</strong><br>Historic monument – ⭐⭐⭐⭐⭐</div>
+  <div class="result"><strong>Golden Temple</strong><br>Spiritual place – ⭐⭐⭐⭐☆</div>
 
-  <button class="btn" style="margin-top:10px" onclick="go('p5')">Continue</button>
+  <button class="btn-primary" style="width:100%" onclick="go('thanks')">Continue</button>
 </section>
 
-<!-- PAGE 5 -->
-<section class="page thankyou" id="p5">
-  <div class="home" onclick="go('p1')">🏠</div>
+<!-- THANK YOU -->
+<section class="page" id="thanks">
+  <div class="home" onclick="go('intro')">🏠 Home</div>
   <h2>Thank you for exploring India with Galigyan 🌏</h2>
-  <p>Your feedback means a lot 💚</p>
+  <p>Your feedback means a lot 💫</p>
 
   <div class="stars" id="stars">
     <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
@@ -316,19 +278,34 @@ body{
 </section>
 
 <script>
-const click=document.getElementById("clickSound");
-const page=document.getElementById("pageSound");
+/* PAGE NAV */
 function go(id){
-  click.play();page.play();
+  document.getElementById("click").play();
   document.querySelectorAll(".page").forEach(p=>p.classList.remove("active"));
   document.getElementById(id).classList.add("active");
 }
 
+/* INTRO IMAGES */
+const intro=document.getElementById("intro");
+const imgs=[
+ "https://images.unsplash.com/photo-1564507592333-c60657eea523",
+ "https://images.unsplash.com/photo-1506466010722-395aa2bef877",
+ "https://images.unsplash.com/photo-1548013146-72479768bada"
+];
+let i=0;
+intro.style.backgroundImage=url(${imgs[0]});
+setInterval(()=>{
+  i=(i+1)%imgs.length;
+  intro.style.backgroundImage=url(${imgs[i]});
+},4000);
+
+/* RADIUS */
 const map=["10 m","500 m","1 km","10 km","100 km","♾"];
-function radius(v){
+function updateRadius(v){
   document.getElementById("rVal").innerText=map[v-1];
 }
 
+/* RATING */
 const stars=document.getElementById("stars").children;
 for(let i=0;i<stars.length;i++){
   stars[i].onclick=()=>{
@@ -336,17 +313,6 @@ for(let i=0;i<stars.length;i++){
     for(let k=0;k<=i;k++)stars[k].classList.add("active");
   };
 }
-
-/* intro bg */
-const intro=document.getElementById("p1");
-const imgs=[
-  "https://images.unsplash.com/photo-1564507592333-c60657eea523",
-  "https://images.unsplash.com/photo-1506466010722-395aa2bef877",
-  "https://images.unsplash.com/photo-1548013146-72479768bada"
-];
-let i=0;
-intro.style.backgroundImage=url(${imgs[0]});
-setInterval(()=>{i=(i+1)%imgs.length;intro.style.backgroundImage=url(${imgs[i]});},4000);
 </script>
 
 </body>
