--- a/index.html
+++ b/index.html
@@ -2,317 +2,196 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Galigyan – Explore India Better</title>
+<title>Galigyan</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- GOOGLE FONT -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-
 <style>
-*{margin:0;padding:0;box-sizing:border-box}
-body{
-  font-family:'Poppins',sans-serif;
-  background:#f3f6f2;
-  overflow:hidden;
+* { box-sizing: border-box; }
+body {
+  margin: 0;
+  font-family: "Poppins", sans-serif;
+  background: #fff6e5;
 }
 
-/* ---------- PAGE SYSTEM ---------- */
-.page{
-  display:none;
-  width:100vw;
-  height:100vh;
-}
-.page.active{
-  display:flex;
-  flex-direction:column;
+.page {
+  display: none;
+  min-height: 100vh;
+  padding: 20px;
 }
 
-/* ---------- COMMON ---------- */
-.home{
-  font-size:20px;
-  margin:14px;
-  cursor:pointer;
-}
-button{
-  border:none;
-  cursor:pointer;
-}
-.btn-primary{
-  background:linear-gradient(90deg,#2ecc71,#27ae60);
-  color:white;
-  padding:14px 34px;
-  border-radius:30px;
-  font-size:16px;
+.page.active { display: block; }
+
+.topbar {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-weight: bold;
+  font-size: 22px;
+  cursor: pointer;
 }
 
-/* ---------- INTRO ---------- */
-#intro{
-  justify-content:center;
-  align-items:center;
-  text-align:center;
-  color:white;
-  background-size:cover;
-  background-position:center;
-  position:relative;
-}
-#intro::before{
-  content:"";
-  position:absolute;
-  inset:0;
-  background:rgba(0,0,0,.45);
-}
-.logo{
-  font-size:42px;
-  font-weight:600;
-  margin-bottom:20px;
-  position:relative;
-  z-index:2;
-  transition:.3s;
-}
-.logo:hover{
-  transform:scale(1.05);
-  text-shadow:0 0 12px rgba(255,255,255,.6);
-}
-#intro .btn-primary{
-  position:relative;
-  z-index:2;
+.topbar span:hover { color: #2563eb; }
+
+.center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 80vh;
+  text-align: center;
 }
 
-/* ---------- SERVICES ---------- */
-#services{
-  padding:20px;
-}
-#services h2{
-  text-align:center;
-  margin-bottom:15px;
-}
-.service-list{
-  max-width:420px;
-  margin:0 auto;
-  display:flex;
-  flex-direction:column;
-  gap:14px;
-}
-.service{
-  height:90px;
-  border-radius:16px;
-  color:white;
-  position:relative;
-  background-size:cover;
-  background-position:center;
-}
-.service::before{
-  content:"";
-  position:absolute;
-  inset:0;
-  background:rgba(0,0,0,.45);
-}
-.service span{
-  position:absolute;
-  bottom:12px;
-  left:16px;
-  z-index:2;
-  font-size:17px;
-}
-.service small{
-  position:absolute;
-  bottom:12px;
-  right:16px;
-  z-index:2;
-  color:gold;
+button {
+  padding: 14px 28px;
+  font-size: 18px;
+  border: none;
+  border-radius: 10px;
+  background: #2563eb;
+  color: white;
+  cursor: pointer;
 }
 
-/* ---------- LOCATION ---------- */
-#location{
-  padding:20px;
-  background:#eef3ee;
-}
-#location h2{
-  text-align:center;
-  margin-bottom:12px;
-}
-.loc-box{
-  background:white;
-  max-width:420px;
-  margin:0 auto;
-  padding:22px;
-  border-radius:20px;
-}
-.loc-input{
-  display:flex;
-  gap:10px;
-  border:1px solid #ccc;
-  padding:12px;
-  border-radius:12px;
-}
-.loc-input input{
-  border:none;
-  outline:none;
-  width:100%;
-}
-.radius-value{
-  text-align:center;
-  margin:12px 0 6px;
-  font-weight:600;
-}
-input[type=range]{width:100%}
-
-/* ---------- RESULTS ---------- */
-#results{
-  padding:20px;
-}
-.note{
-  text-align:center;
-  font-size:13px;
-  opacity:.7;
-  margin-bottom:14px;
-}
-.result{
-  background:white;
-  border-radius:16px;
-  padding:14px;
-  margin-bottom:10px;
+.services .card,
+.results .card {
+  background: white;
+  padding: 20px;
+  margin: 15px auto;
+  border-radius: 14px;
+  max-width: 420px;
+  box-shadow: 0 6px 14px rgba(0,0,0,0.1);
 }
 
-/* ---------- THANK YOU ---------- */
-#thanks{
-  justify-content:center;
-  align-items:center;
-  text-align:center;
-  background:linear-gradient(180deg,#f0f9f4,#c8f1d3);
+.rating span {
+  font-size: 26px;
+  cursor: pointer;
+  color: #ccc;
 }
-.stars span{
-  font-size:30px;
-  cursor:pointer;
-  color:#ccc;
+
+.rating span.active { color: gold; }
+
+input[type="range"] {
+  width: 100%;
 }
-.stars span.active{color:gold}
-.creator{
-  margin-top:24px;
-  font-size:13px;
-  opacity:.7;
+
+.footer {
+  text-align: center;
+  margin-top: 30px;
+  font-size: 14px;
 }
 </style>
 </head>
 
 <body>
 
-<!-- AUDIO -->
-<audio id="click">
-  <source src="https://www.soundjay.com/buttons/sounds/button-16.mp3">
-</audio>
-
-<!-- INTRO -->
-<section class="page active" id="intro">
-  <div class="logo">Galigyan</div>
-  <button class="btn-primary" onclick="go('services')">Explore Now →</button>
-</section>
-
-<!-- SERVICES -->
-<section class="page" id="services">
-  <div class="home" onclick="go('intro')">🏠 Home</div>
-  <h2>What do you want to explore?</h2>
-
-  <div class="service-list">
-    <div class="service" onclick="go('location')" style="background-image:url('https://images.unsplash.com/photo-1524492412937-b28074a5d7da')">
-      <span>Best Places</span><small>★★★★★</small>
-    </div>
-    <div class="service" onclick="go('location')" style="background-image:url('https://images.unsplash.com/photo-1566073771259-6a8506099945')">
-      <span>Hotels & Stays</span><small>★★★★☆</small>
-    </div>
-    <div class="service" onclick="go('location')" style="background-image:url('https://images.unsplash.com/photo-1548013146-72479768bada')">
-      <span>Spiritual Places</span><small>★★★★★</small>
-    </div>
-    <div class="service" onclick="go('location')" style="background-image:url('https://images.unsplash.com/photo-1555396273-367ea4eb4db5')">
-      <span>Restaurants</span><small>★★★★☆</small>
-    </div>
-    <div class="service" onclick="go('location')" style="background-image:url('https://images.unsplash.com/photo-1521334884684-d80222895322')">
-      <span>Shopping Areas</span><small>★★★★☆</small>
-    </div>
+<!-- PAGE 1 -->
+<div id="page1" class="page active">
+  <div class="topbar"><span>Galigyan</span></div>
+  <div class="center" id="hero">
+    <h1>Discover Incredible India</h1>
+    <button onclick="go('page2')">Explore Now</button>
   </div>
-</section>
+  <div class="footer">Created by Aman Kumar Mishra</div>
+</div>
 
-<!-- LOCATION -->
-<section class="page" id="location">
-  <div class="home" onclick="go('intro')">🏠 Home</div>
-  <h2>Where are you right now?</h2>
+<!-- PAGE 2 -->
+<div id="page2" class="page">
+  <div class="topbar" onclick="go('page1')">🏠 <span>Galigyan</span></div>
+  <h2>Choose a Service</h2>
 
-  <div class="loc-box">
-    <div class="loc-input">
-      <input placeholder="Enter your location">
-      <span>📍</span>
-    </div>
-
-    <div class="radius-value" id="rVal">10 m</div>
-    <input type="range" min="1" max="6" value="1" oninput="updateRadius(this.value)">
-
-    <button class="btn-primary" style="width:100%;margin-top:16px" onclick="go('results')">
-      Continue
-    </button>
+  <div class="services">
+    <div class="card" onclick="go('page3')">📍 Travel Spots ⭐⭐⭐⭐</div>
+    <div class="card" onclick="go('page3')">🏨 Hotels ⭐⭐⭐⭐</div>
+    <div class="card" onclick="go('page3')">🛕 Spiritual Places ⭐⭐⭐⭐⭐</div>
+    <div class="card" onclick="go('page3')">🍽 Restaurants ⭐⭐⭐⭐</div>
+    <div class="card" onclick="go('page3')">🛍 Shopping Areas ⭐⭐⭐</div>
   </div>
-</section>
+</div>
 
-<!-- RESULTS -->
-<section class="page" id="results">
-  <div class="home" onclick="go('intro')">🏠 Home</div>
-  <h2 style="text-align:center">Best results for you</h2>
-  <div class="note">Showing sample results. Real data coming soon.</div>
+<!-- PAGE 3 -->
+<div id="page3" class="page">
+  <div class="topbar" onclick="go('page2')">🏠 <span>Galigyan</span></div>
+  <h2>Your Location</h2>
 
-  <div class="result"><strong>Taj Mahal</strong><br>Historic monument – ⭐⭐⭐⭐⭐</div>
-  <div class="result"><strong>Golden Temple</strong><br>Spiritual place – ⭐⭐⭐⭐☆</div>
+  <input placeholder="Enter your location" style="width:100%;padding:12px">
+  <br><br>
+  <button onclick="alert('GPS coming soon')">📡 Use GPS</button>
 
-  <button class="btn-primary" style="width:100%" onclick="go('thanks')">Continue</button>
-</section>
+  <h3 id="radiusValue">Radius: 10m</h3>
+  <input type="range" min="10" max="1000" value="10"
+         oninput="updateRadius(this.value)">
 
-<!-- THANK YOU -->
-<section class="page" id="thanks">
-  <div class="home" onclick="go('intro')">🏠 Home</div>
-  <h2>Thank you for exploring India with Galigyan 🌏</h2>
-  <p>Your feedback means a lot 💫</p>
+  <br><br>
+  <button onclick="go('page4')">Show Results</button>
+</div>
 
-  <div class="stars" id="stars">
-    <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+<!-- PAGE 4 -->
+<div id="page4" class="page">
+  <div class="topbar" onclick="go('page1')">🏠 <span>Galigyan</span></div>
+  <h2>Results</h2>
+
+  <div class="results">
+    <div class="card">Taj Mahal – Agra ⭐⭐⭐⭐⭐</div>
+    <div class="card">Golden Temple – Amritsar ⭐⭐⭐⭐⭐</div>
+    <div class="card">Meenakshi Temple – Madurai ⭐⭐⭐⭐</div>
   </div>
 
-  <div class="creator">Created by Aman Kumar Mishra</div>
-</section>
+  <button onclick="go('page5')">Continue</button>
+</div>
+
+<!-- PAGE 5 -->
+<div id="page5" class="page">
+  <div class="topbar" onclick="go('page1')">🏠 <span>Galigyan</span></div>
+  <div class="center">
+    <h2>Thank You for Exploring!</h2>
+    <div class="rating" id="rating">
+      <span onclick="rate(this)">★</span>
+      <span onclick="rate(this)">★</span>
+      <span onclick="rate(this)">★</span>
+      <span onclick="rate(this)">★</span>
+      <span onclick="rate(this)">★</span>
+    </div>
+    <p>Created by Aman Kumar Mishra</p>
+  </div>
+</div>
 
 <script>
-/* PAGE NAV */
-function go(id){
-  document.getElementById("click").play();
-  document.querySelectorAll(".page").forEach(p=>p.classList.remove("active"));
+const pages = document.querySelectorAll(".page");
+const clickSound = new Audio("https://actions.google.com/sounds/v1/cartoon/pop.ogg");
+
+function go(id) {
+  pages.forEach(p => p.classList.remove("active"));
   document.getElementById(id).classList.add("active");
+  clickSound.play().catch(()=>{});
 }
 
-/* INTRO IMAGES */
-const intro=document.getElementById("intro");
-const imgs=[
- "https://images.unsplash.com/photo-1564507592333-c60657eea523",
- "https://images.unsplash.com/photo-1506466010722-395aa2bef877",
- "https://images.unsplash.com/photo-1548013146-72479768bada"
+function updateRadius(val) {
+  document.getElementById("radiusValue").innerText =
+    val >= 1000 ? "Radius: ♾" : "Radius: " + val + "m";
+}
+
+function rate(el) {
+  const stars = el.parentElement.children;
+  for (let i=0;i<stars.length;i++) {
+    stars[i].classList.toggle("active", stars[i] <= el);
+  }
+}
+
+// Hero background rotation
+const hero = document.getElementById("hero");
+const images = [
+  "https://images.unsplash.com/photo-1564507592333-c60657eea523",
+  "https://images.unsplash.com/photo-1548013146-72479768bada",
+  "https://images.unsplash.com/photo-1587474260584-136574528ed5"
 ];
-let i=0;
-intro.style.backgroundImage=url(${imgs[0]});
+let i = 0;
+hero.style.background =
+  url(${images[0]}) center/cover no-repeat;
+
 setInterval(()=>{
-  i=(i+1)%imgs.length;
-  intro.style.backgroundImage=url(${imgs[i]});
+  i = (i+1)%images.length;
+  hero.style.background =
+    url(${images[i]}) center/cover no-repeat;
 },4000);
-
-/* RADIUS */
-const map=["10 m","500 m","1 km","10 km","100 km","♾"];
-function updateRadius(v){
-  document.getElementById("rVal").innerText=map[v-1];
-}
-
-/* RATING */
-const stars=document.getElementById("stars").children;
-for(let i=0;i<stars.length;i++){
-  stars[i].onclick=()=>{
-    for(let j=0;j<stars.length;j++)stars[j].classList.remove("active");
-    for(let k=0;k<=i;k++)stars[k].classList.add("active");
-  };
-}
 </script>
 
 </body>
