--- a/index.html
+++ b/index.html
@@ -1,198 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
-<title>Galigyan</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<style>
-* { box-sizing: border-box; }
-body {
-  margin: 0;
-  font-family: "Poppins", sans-serif;
-  background: #fff6e5;
-}
-
-.page {
-  display: none;
-  min-height: 100vh;
-  padding: 20px;
-}
-
-.page.active { display: block; }
-
-.topbar {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  font-weight: bold;
-  font-size: 22px;
-  cursor: pointer;
-}
-
-.topbar span:hover { color: #2563eb; }
-
-.center {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-height: 80vh;
-  text-align: center;
-}
-
-button {
-  padding: 14px 28px;
-  font-size: 18px;
-  border: none;
-  border-radius: 10px;
-  background: #2563eb;
-  color: white;
-  cursor: pointer;
-}
-
-.services .card,
-.results .card {
-  background: white;
-  padding: 20px;
-  margin: 15px auto;
-  border-radius: 14px;
-  max-width: 420px;
-  box-shadow: 0 6px 14px rgba(0,0,0,0.1);
-}
-
-.rating span {
-  font-size: 26px;
-  cursor: pointer;
-  color: #ccc;
-}
-
-.rating span.active { color: gold; }
-
-input[type="range"] {
-  width: 100%;
-}
-
-.footer {
-  text-align: center;
-  margin-top: 30px;
-  font-size: 14px;
-}
-</style>
+<title>Test</title>
 </head>
-
 <body>
 
-<!-- PAGE 1 -->
-<div id="page1" class="page active">
-  <div class="topbar"><span>Galigyan</span></div>
-  <div class="center" id="hero">
-    <h1>Discover Incredible India</h1>
-    <button onclick="go('page2')">Explore Now</button>
-  </div>
-  <div class="footer">Created by Aman Kumar Mishra</div>
-</div>
-
-<!-- PAGE 2 -->
-<div id="page2" class="page">
-  <div class="topbar" onclick="go('page1')">🏠 <span>Galigyan</span></div>
-  <h2>Choose a Service</h2>
-
-  <div class="services">
-    <div class="card" onclick="go('page3')">📍 Travel Spots ⭐⭐⭐⭐</div>
-    <div class="card" onclick="go('page3')">🏨 Hotels ⭐⭐⭐⭐</div>
-    <div class="card" onclick="go('page3')">🛕 Spiritual Places ⭐⭐⭐⭐⭐</div>
-    <div class="card" onclick="go('page3')">🍽 Restaurants ⭐⭐⭐⭐</div>
-    <div class="card" onclick="go('page3')">🛍 Shopping Areas ⭐⭐⭐</div>
-  </div>
-</div>
-
-<!-- PAGE 3 -->
-<div id="page3" class="page">
-  <div class="topbar" onclick="go('page2')">🏠 <span>Galigyan</span></div>
-  <h2>Your Location</h2>
-
-  <input placeholder="Enter your location" style="width:100%;padding:12px">
-  <br><br>
-  <button onclick="alert('GPS coming soon')">📡 Use GPS</button>
-
-  <h3 id="radiusValue">Radius: 10m</h3>
-  <input type="range" min="10" max="1000" value="10"
-         oninput="updateRadius(this.value)">
-
-  <br><br>
-  <button onclick="go('page4')">Show Results</button>
-</div>
-
-<!-- PAGE 4 -->
-<div id="page4" class="page">
-  <div class="topbar" onclick="go('page1')">🏠 <span>Galigyan</span></div>
-  <h2>Results</h2>
-
-  <div class="results">
-    <div class="card">Taj Mahal – Agra ⭐⭐⭐⭐⭐</div>
-    <div class="card">Golden Temple – Amritsar ⭐⭐⭐⭐⭐</div>
-    <div class="card">Meenakshi Temple – Madurai ⭐⭐⭐⭐</div>
-  </div>
-
-  <button onclick="go('page5')">Continue</button>
-</div>
-
-<!-- PAGE 5 -->
-<div id="page5" class="page">
-  <div class="topbar" onclick="go('page1')">🏠 <span>Galigyan</span></div>
-  <div class="center">
-    <h2>Thank You for Exploring!</h2>
-    <div class="rating" id="rating">
-      <span onclick="rate(this)">★</span>
-      <span onclick="rate(this)">★</span>
-      <span onclick="rate(this)">★</span>
-      <span onclick="rate(this)">★</span>
-      <span onclick="rate(this)">★</span>
-    </div>
-    <p>Created by Aman Kumar Mishra</p>
-  </div>
-</div>
+<button onclick="go('page2')">Go</button>
 
 <script>
-const pages = document.querySelectorAll(".page");
-const clickSound = new Audio("https://actions.google.com/sounds/v1/cartoon/pop.ogg");
-
 function go(id) {
-  pages.forEach(p => p.classList.remove("active"));
-  document.getElementById(id).classList.add("active");
-  clickSound.play().catch(()=>{});
+  alert("Working: " + id);
 }
-
-function updateRadius(val) {
-  document.getElementById("radiusValue").innerText =
-    val >= 1000 ? "Radius: ♾" : "Radius: " + val + "m";
-}
-
-function rate(el) {
-  const stars = el.parentElement.children;
-  for (let i=0;i<stars.length;i++) {
-    stars[i].classList.toggle("active", stars[i] <= el);
-  }
-}
-
-// Hero background rotation
-const hero = document.getElementById("hero");
-const images = [
-  "https://images.unsplash.com/photo-1564507592333-c60657eea523",
-  "https://images.unsplash.com/photo-1548013146-72479768bada",
-  "https://images.unsplash.com/photo-1587474260584-136574528ed5"
-];
-let i = 0;
-hero.style.background =
-  url(${images[0]}) center/cover no-repeat;
-
-setInterval(()=>{
-  i = (i+1)%images.length;
-  hero.style.background =
-    url(${images[i]}) center/cover no-repeat;
-},4000);
 </script>
 
 </body>
 </html>
+
